# godot-orchestrator

./: .gitignore  CMakeLists.txt
cmake/: godot-dev-configuration.cmake
project/addons/orchestrator/: orchestrator.gdextension
src/script/serialization/: text_loader_instance.cpp
